--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -1103,7 +1103,7 @@ System.GetOpts$(PPUEXT) : $(NSINC)/System.GetOpts.pp $(GETOPTS_DEPS)
 # lineinfo
 #
 LINEINFO_DEPS=$(INC)/lineinfo.pp \
-              $(STRINGSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
+              $(STRINGSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(EXEINFOUNIT)$(PPUEXT) \
               $(LINEINFO_DEPS_OS)  $(LINEINFO_DEPS_CPU)
 
 
@@ -1121,14 +1121,14 @@ EXEINFO_DEPS=$(INC)/exeinfo.pp \
 exeinfo$(PPUEXT) : $(EXEINFO_DEPS)
 	$(COMPILER) $(EXEINFO_OPT) $<
 
-System.ExeInfo$(PPUEXT) : $(NSINC)/System.ExeInfo.pp $(LINEINFO_DEPS)
+System.ExeInfo$(PPUEXT) : $(NSINC)/System.ExeInfo.pp $(EXEINFO_DEPS)
 	$(COMPILER) $(EXEINFO_OPT) $<
 
 #
 # lnfodwrf
 #
 LNFODWRF_DEPS=$(INC)/lnfodwrf.pp \
-              $(SYSTEMUNIT)$(PPUEXT) $(STRINGSUNIT)$(PPUEXT) $(LINEINFOUNIT)$(PPUEXT) \
+              $(SYSTEMUNIT)$(PPUEXT) $(STRINGSUNIT)$(PPUEXT) \
               $(SYSUTILSUNIT)$(PPUEXT) $(EXEINFOUNIT)$(PPUEXT) \
               $(LNFODWRF_DEPS_OS) $(LNFODWRF_DEPS_CPU)
               
@@ -1140,10 +1140,10 @@ System.LineInfo.Dwarf$(PPUEXT) : $(NSINC)/System.LineInfo.Dwarf.pp $(LNFODWRF_DE
 
 #
 # lnfodgdb
-#
+# uses ctypes,baseunix,unix;
 LNFOGDB_DEPS=$(UNIXINC)/lnfogdb.pp \
-              $(SYSTEMUNIT)$(PPUEXT) $(STRINGSUNIT)$(PPUEXT) $(LINEINFOUNIT)$(PPUEXT) \
-              $(SYSUTILSUNIT)$(PPUEXT) $(EXEINFOUNIT)$(PPUEXT) \
+              $(SYSTEMUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) \
+	      $(BASEUNIXUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) \
               $(LNFOGDB_DEPS_OS) $(LNFOGDB_DEPS_CPU)
               
 lnfogdb$(PPUEXT) : $(LNFOGDB_DEPS)
