Regnerated Makefile's after dependency fixes for debug info units

--- a/rtl/wii/Makefile
+++ b/rtl/wii/Makefile
@@ -2425,7 +2425,7 @@ getopts$(PPUEXT) : $(GETOPTS_DEPS)
 System.GetOpts$(PPUEXT) : $(NSINC)/System.GetOpts.pp $(GETOPTS_DEPS)
 	$(COMPILER)  $(GETOPTS_OPT) $<
 LINEINFO_DEPS=$(INC)/lineinfo.pp \
-	      $(STRINGSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
+	      $(STRINGSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) $(EXEINFOUNIT)$(PPUEXT) \
 	      $(LINEINFO_DEPS_OS)  $(LINEINFO_DEPS_CPU)
 lineinfo$(PPUEXT) : $(LINEINFO_DEPS)
 	$(COMPILER) $(LINEINFO_OPT) $<
@@ -2436,10 +2436,10 @@ EXEINFO_DEPS=$(INC)/exeinfo.pp \
 	      $(EXEINFO_DEPS_OS)  $(EXEINFO_DEPS_CPU)
 exeinfo$(PPUEXT) : $(EXEINFO_DEPS)
 	$(COMPILER) $(EXEINFO_OPT) $<
-System.ExeInfo$(PPUEXT) : $(NSINC)/System.ExeInfo.pp $(LINEINFO_DEPS)
+System.ExeInfo$(PPUEXT) : $(NSINC)/System.ExeInfo.pp $(EXEINFO_DEPS)
 	$(COMPILER) $(EXEINFO_OPT) $<
 LNFODWRF_DEPS=$(INC)/lnfodwrf.pp \
-	      $(SYSTEMUNIT)$(PPUEXT) $(STRINGSUNIT)$(PPUEXT) $(LINEINFOUNIT)$(PPUEXT) \
+	      $(SYSTEMUNIT)$(PPUEXT) $(STRINGSUNIT)$(PPUEXT) \
 	      $(SYSUTILSUNIT)$(PPUEXT) $(EXEINFOUNIT)$(PPUEXT) \
 	      $(LNFODWRF_DEPS_OS) $(LNFODWRF_DEPS_CPU)
 lnfodwrf$(PPUEXT) : $(LNFODWRF_DEPS)
@@ -2447,8 +2447,8 @@ lnfodwrf$(PPUEXT) : $(LNFODWRF_DEPS)
 System.LineInfo.Dwarf$(PPUEXT) : $(NSINC)/System.LineInfo.Dwarf.pp $(LNFODWRF_DEPS)
 	$(COMPILER) $(LNFODWRF_OPT) $<
 LNFOGDB_DEPS=$(UNIXINC)/lnfogdb.pp \
-	      $(SYSTEMUNIT)$(PPUEXT) $(STRINGSUNIT)$(PPUEXT) $(LINEINFOUNIT)$(PPUEXT) \
-	      $(SYSUTILSUNIT)$(PPUEXT) $(EXEINFOUNIT)$(PPUEXT) \
+	      $(SYSTEMUNIT)$(PPUEXT) $(CTYPESUNIT)$(PPUEXT) \
+	      $(BASEUNIXUNIT)$(PPUEXT) $(UNIXUNIT)$(PPUEXT) \
 	      $(LNFOGDB_DEPS_OS) $(LNFOGDB_DEPS_CPU)
 lnfogdb$(PPUEXT) : $(LNFOGDB_DEPS)
 	$(COMPILER) $(LNFOGDB_OPT) $<
