--- a/rtl/win64/Makefile.fpc
+++ b/rtl/win64/Makefile.fpc
@@ -62,7 +62,17 @@ WINDIRSDIR=$(WINDIR)
 
 UNITPREFIX=rtl
 SYSTEMUNIT=system
-
+EXEINFO_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
+# buildrtl contains charset
+# so let's state that cpall depends on buildrtl
+# to avoid charset being compiled twice
+CPALL_DEPS_OS=buildrtl$(PPUEXT)
+# exeinfo unit is inside buildrtl
+# so add a dependency on buildrtl
+# for lineinfo and lnfodwrf units
+# which depend on exeinfo
+LINEINFO_DEPS_OS=buildrtl$(PPUEXT)
+LNFODWRF_DEPS_OS=buildrtl$(PPUEXT)
 
 ifeq ($(ARCH),x86_64)
 # signals unit is x86 specific for now
@@ -80,6 +90,7 @@ FPC_SYSTEM_OPT=-Fi../win
 EXEINFO_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
 
 [rules]
+.NOTPARALLEL:
 SYSTEMPPU=$(addsuffix $(PPUEXT),system)
 
 # Get the system independent include file names.
