--- a/rtl/win64/Makefile.fpc
+++ b/rtl/win64/Makefile.fpc
@@ -7,14 +7,14 @@ main=rtl
 
 [target]
 loaders=$(LOADERS)
-units=system uuchar objpas macpas $(ISO7185UNIT) buildrtl $(CPALLUNIT) $(LINEINFOUNIT) $(LNFODWRFUNIT)
+units=system uuchar objpas macpas $(ISO7185UNIT) $(WINDOWSUNIT) $(SYSUTILSUNIT) buildrtl $(CHARSETUNIT) $(CPALLUNIT) $(LINEINFOUNIT) $(LNFODWRFUNIT)
 implicitunits=sysinit extpas heaptrc fpintres \
       $(CTYPESUNIT) $(STRINGSUNIT) \
       $(DOSUNIT) $(MESSAGESUNIT) \
-      $(WINDOWSUNIT) $(CMEMUNIT) $(DYNLIBSUNIT) \
-      $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(TYPESUNIT) \
+      $(CMEMUNIT) $(DYNLIBSUNIT) \
+      $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(MATHUNIT) $(TYPESUNIT) \
       $(TYPINFOUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(GETOPTSUNIT) \
-      $(CHARSETUNIT) $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) \
+      $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) \
       $(SHAREMEMUNIT) $(EXEINFOUNIT) $(WINDIRSUNIT) \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT) \
       $(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT) $(CP1255UNIT) $(CP1256UNIT) $(CP1257UNIT) $(CP1258UNIT) \
@@ -57,7 +57,7 @@ OSDIR=win64
 NSOSDIR=$(NSDIR)/windows
 SYSUTILSDIR=$(WINDIR)
 SYSUTILS_OPT=-Fi../win
-#SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) $(WINDIRSUNIT)$(PPUEXT)
+SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) $(WINDIRSUNIT)$(PPUEXT)
 
 UNITPREFIX=rtl
 SYSTEMUNIT=system
@@ -65,7 +65,7 @@ SYSTEMUNIT=system
 
 ifeq ($(ARCH),x86_64)
 # signals unit is x86 specific for now
-CPU_UNITS=cpu signals
+CPU_UNITS=$(CPUUNIT) $(SIGNALSUNIT)
 endif
 
 # Paths
@@ -76,6 +76,7 @@ OBJPASDIR=$(RTL)/objpas
 
 WINDOWS_SOURCE_FILES=$(addprefix $(WININC)/,$(addsuffix .inc,$(WINDOWS_FILES)))
 FPC_SYSTEM_OPT=-Fi../win
+EXEINFO_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
 
 [rules]
 SYSTEMPPU=$(addsuffix $(PPUEXT),system)
@@ -108,7 +109,7 @@ endif
 # Unit specific rules
 #
 
-BUILDRTL_DEPS=buildrtl.pp system$(PPUEXT) objpas$(PPUEXT) \
+BUILDRTL_DEPS=buildrtl.pp system$(PPUEXT) objpas$(PPUEXT) $(WINDOWSUNIT)$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
               $(BUILDRTL_DEPS_OS) $(BUILDRTL_DEPS_CPU)
 
 buildrtl$(PPUEXT) : $(BUILDRTL_DEPS)
