Add WINDIRSDIR variable

--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -1434,7 +1434,7 @@ WinApi.Windows$(PPUEXT): $(NSOSDIR)/WinApi.Windows.pp $(WINDOWS_DEPS)
 #
 # Windirs
 #
-WINDIRS_DEPS=windirs.pp $(WINDOWSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+WINDIRS_DEPS=$(WINDIRSDIR)/windirs.pp $(WINDOWSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
              $(WINDIRS_DEPS_OS) $(WINDIRS_DEPS_CPU)
 
 windirs$(PPUEXT): $(WINDIRS_DEPS)
