--- a/rtl/win32/Makefile.fpc
+++ b/rtl/win32/Makefile.fpc
@@ -60,10 +60,11 @@ DLLS=fpcmemdll
 CPU_UNITS=$(CPUUNIT) $(SIGNALSUNIT) $(MMXUNIT)
 # Paths
 OBJPASDIR=$(RTL)/objpas
-FPC_SYSTEM_OPT=-Fu../win
+FPC_SYSTEM_OPT=-Fu$(WINDIR)
 SYSUTILSDIR=$(WINDIR)
-SYSUTILS_OPT=-Fi../win
+SYSUTILS_OPT=-Fi$(WINDIR)
 SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) $(WINDIRSUNIT)$(PPUEXT)
+WINDIRSDIR=$(WINDIR)
 
 # Files used by windows.pp
 include $(WININC)/makefile.inc
