Small fixes need to get i386-linux dotted ready.
  * Add explicit -dFPC_DOOTEDUNITS for fpcylix unit
  * Add dependecy on sysutils for cpu unit
  * Add missing CPU_DEPS for System.CPU.ppu rule

--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -616,6 +616,7 @@ ifdef FPC_DOTTEDUNITS
 BLOCKRTL_OPT:=$(BLOCKRTL_OPT) -dFPC_DOTTEDUNITS
 FPEXTRES_OPT:=$(FPEXTRES_OPT) -dFPC_DOTTEDUNITS
 OBJC_OPT:=$(OBJC_OPT) -dFPC_DOTTEDUNITS
+FPCYLIX_OPT:=$(FPCYLIX_OPT) -dFPC_DOTTEDUNITS
 endif
 
 
@@ -1049,13 +1050,13 @@ CPU_DEPS_CPU:=$(CPU_DEPS_CPU) $(SYSUTILSUNIT)$(PPUEXT)
 endif
 
 CPU_DEPS=$(PROCINC)/cpu.pp \
-         $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+         $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
          $(CPU_DEPS_OS) $(CPU_DEPS_CPU)
 
 cpu$(PPUEXT) : $(CPU_DEPS)
 	$(COMPILER) $(CPU_OPT) $<
 
-System.CPU$(PPUEXT) : $(NSINC)/System.CPU.pp
+System.CPU$(PPUEXT) : $(NSINC)/System.CPU.pp $(CPU_DEPS)
 	$(COMPILER) $(CPU_OPT) $<
 
 #
