--- a/rtl/android/Makefile
+++ b/rtl/android/Makefile
@@ -2348,6 +2348,7 @@ ifdef FPC_DOTTEDUNITS
 BLOCKRTL_OPT:=$(BLOCKRTL_OPT) -dFPC_DOTTEDUNITS
 FPEXTRES_OPT:=$(FPEXTRES_OPT) -dFPC_DOTTEDUNITS
 OBJC_OPT:=$(OBJC_OPT) -dFPC_DOTTEDUNITS
+FPCYLIX_OPT:=$(FPCYLIX_OPT) -dFPC_DOTTEDUNITS
 endif
 $(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT).$(SYSTEMUNITEXT) $(SYSDEPS)
 	$(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $<
@@ -2566,11 +2567,11 @@ ifneq ($(findstring $(ARCH),x86_64 i386 i8086),)
 CPU_DEPS_CPU:=$(CPU_DEPS_CPU) $(SYSUTILSUNIT)$(PPUEXT)
 endif
 CPU_DEPS=$(PROCINC)/cpu.pp \
-	 $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
+	 $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) $(SYSUTILSUNIT)$(PPUEXT) \
 	 $(CPU_DEPS_OS) $(CPU_DEPS_CPU)
 cpu$(PPUEXT) : $(CPU_DEPS)
 	$(COMPILER) $(CPU_OPT) $<
-System.CPU$(PPUEXT) : $(NSINC)/System.CPU.pp
+System.CPU$(PPUEXT) : $(NSINC)/System.CPU.pp $(CPU_DEPS)
 	$(COMPILER) $(CPU_OPT) $<
 MMX_DEPS=$(PROCINC)/mmx.pp \
 	 $(CPUUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
