--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -616,6 +616,7 @@ ifdef FPC_DOTTEDUNITS
 BLOCKRTL_OPT:=$(BLOCKRTL_OPT) -dFPC_DOTTEDUNITS
 FPEXTRES_OPT:=$(FPEXTRES_OPT) -dFPC_DOTTEDUNITS
 OBJC_OPT:=$(OBJC_OPT) -dFPC_DOTTEDUNITS
+OBJCBASE_OPT:=$(OBJCBASE_OPT) -dFPC_DOTTEDUNITS
 FPCYLIX_OPT:=$(FPCYLIX_OPT) -dFPC_DOTTEDUNITS
 endif
 
@@ -1069,7 +1070,7 @@ MMX_DEPS=$(PROCINC)/mmx.pp \
 mmx$(PPUEXT) : $(MMX_DEPS)
 	$(COMPILER) $(MMX_OPT) $<
 
-System.MMX$(PPUEXT) : $(NSINC)/System.MMX $(MMX_DEPS)
+System.CPU.MMX$(PPUEXT) : $(NSINC)/System.CPU.MMX.pp $(MMX_DEPS)
 	$(COMPILER) $(MMX_OPT) $<
 
 #
