--- a/rtl/netware/Makefile.fpc
+++ b/rtl/netware/Makefile.fpc
@@ -12,7 +12,7 @@ units=$(SYSTEMUNIT) uuchar objpas macpas $(ISO7185UNIT) $(EXTPASUNIT) $(STRINGSU
       $(INITCUNIT) $(SYSUTILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT) \
       $(CHARSETUNIT) $(CPALLUNIT)  $(MMXUNIT) $(GETOPTSUNIT) \
       $(HEAPTRCUNIT) $(LINEINFOUNIT) $(LNFODWRFUNIT) $(DYNLIBSUNIT) \
-      $(CTYPESUNIT)  $(TYPESUNIT) $(RTLCONSTUNIT) \ 
+      $(CTYPESUNIT)  $(TYPESUNIT) $(RTLCONSTSUNIT) \
       $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) $(CMEMUNIT) \
       aio nwsnut nwserv nwnit nwprot netware nwcalls nwpre \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT)       $(UFLOAT128UNIT)
@@ -48,6 +48,7 @@ PROCINC=$(RTL)/$(CPU_TARGET)
 
 UNITPREFIX=rtl
 SYSTEMUNIT=system
+RTLCONSTSUNIT=rtlconst
 DOS_DEPS_OS=$(STRINGSUNIT)$(PPUEXT)
 SYSUTILS_DEPS_OS=$(DOSUNIT)$(PPUEXT)
 
