--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -435,7 +435,9 @@ PROFILEUNIT=profile
 RASPI2UNIT=raspi2
 RASPI3UNIT=raspi3
 RASPIUARTUNIT=raspiuart
-RTLCONSTSUNIT=rtlconsts
+ifeq ($(RTLCONSTSUNIT),)
+  RTLCONSTSUNIT=rtlconsts
+endif
 SAM3X8EUNIT=sam3x8e
 SAMD51P19AUNIT=samd51p19a
 SC32442BUNIT=sc32442b
@@ -662,8 +664,8 @@ OBJPAS_DEPS= $(OBJPASDIR)/objpas.pp $(INC)/except.inc \
              $(SYSTEMUNIT)$(PPUEXT) \
              $(OBJPAS_DEPS_OS) $(OBJPAS_DEPS_SPU)  
 
-objpas$(PPUEXT): $(OBJPASDIR)/objpas.pp $(INC)/except.inc $(SYSTEMUNIT)$(PPUEXT)
-        $(COMPILER) $(OBJPAS_OPT) -I$(OBJPASDIR) $<
+objpas$(PPUEXT): $(OBJPAS_DEPS)
+        $(COMPILER) $(OBJPAS_OPT) -Fi$(OBJPASDIR) $<
 
 # macpas
 
@@ -999,7 +1001,8 @@ System.Math$(PPUEXT): $(NSINC)/System.Math.pp $(MATH_DEPS)
 FGL_DEPS=$(OBJPASDIR)/fgl.pp \
           objpas$(PPUEXT) $(TYPESUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
           $(SYSUTILSUNIT)$(PPUEXT) $(SORTBASEUNIT)$(PPUEXT) \
-          $(FCL_DEPS_OS) $(FCL_DEPS_CPU)
+	  $(RTLCONSTSUNIT)$(PPUEXT) \
+          $(FGL_DEPS_OS) $(FGL_DEPS_CPU)
  
 fgl$(PPUEXT) : $(FGL_DEPS)
         $(COMPILER) $(FGL_OPT) $<
@@ -1034,18 +1037,26 @@ System.SysConst$(PPUEXT) :  $(NSINC)/System.SysConst.pp $(SYSCONST_DEPS)
         $(COMPILER) -Fi$(OBJPASDIR) $(SYSCONST_OPT) $<
 
 #
-# RTLConst
+# RTLConsts (or RTLConst on some systems with LIMIT83fs)
+# Let's only use RTLCONSTS_XX variables
+# But RTLCONSTSUNIT can be either rtlconsts or rtlconst
+# Thus we need to use the variable here
 #
+ifdef FPC_DOTTEDUNITS
 RTLCONSTS_DEPS=$(OBJPASDIR)/rtlconsts.pp \
               objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
-              $(RTLCONST_DEPS_OS) $(RTLCONST_DEPS_CPU)
-
-
-rtlconsts$(PPUEXT) : $(RTLCONSTS_DEPS)
-        $(COMPILER) $(RTLCONSTS_OPT) $<
+              $(RTLCONSTS_DEPS_OS) $(RTLCONSTS_DEPS_CPU)
 
 System.RtlConsts$(PPUEXT) : $(NSINC)/System.RtlConsts.pp $(RTLCONSTS_DEPS)
         $(COMPILER) -Fi$(OBJPASDIR) $(RTLCONSTS_OPT) $<
+else
+RTLCONSTS_DEPS=$(OBJPASDIR)/$(RTLCONSTSUNIT).pp \
+              objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
+              $(RTLCONSTS_DEPS_OS) $(RTLCONSTS_DEPS_CPU)
+
+$(RTLCONSTSUNIT)$(PPUEXT) : $(RTLCONSTS_DEPS)
+        $(COMPILER) $(RTLCONSTS_OPT) $<
+endif
 
 #######################################
 # Other System-independent RTL Units
