Use uppercase UNIT names

--- a/rtl/os2/Makefile.fpc
+++ b/rtl/os2/Makefile.fpc
@@ -8,16 +8,18 @@ main=rtl
 [target]
 loaders=prt0
 units=$(SYSTEMUNIT) uuchar ctypes objpas macpas $(ISO7185UNIT) $(EXTPASUNIT) $(STRINGSUNIT) \
-      $(PORTSUNIT) os2def doscalls doscall2 moncalls kbdcalls moucalls viocalls \
-      pmbitmap pmwin pmgpi pmstddlg pmhelp pmdev pmspl pmshl pmwp pmwsock pmbidi \
+      $(PORTSUNIT) $(OS2DEFUNIT) $(DOSCALLSUNIT) $(DOSCALL2UNIT) $(KBDCALLSUNIT) \
+      $(MOUCALLSUNIT) $(VIOCALLSUNIT) $(SO32DLLUNIT) \
+      $(PMBITMAPUNIT) $(PMWINUNIT) $(PMGPIUNIT) $(PMSTDDLGUNIT) \
+      $(PMHELPUNIT) $(PMDEVUNIT) $(PMSPLUNIT) $(PMSHLUNIT) $(PMWPUNIT) $(PMWSOCKUNIT) $(PMBIDI) \
       $(DOSUNIT) \
       $(SUSITILSUNIT) $(SORTBASEUNIT) $(FGLUNIT) $(CLASSESUNIT) $(MATHUNIT) $(TYPINFOUNIT) \
       $(CHARSETUNIT) $(CPALLUNIT) $(CPUNIT) $(MMXUNIT) $(GETOPTSUNIT) \
       $(HEAPTRCUNIT) $(LINEINFOUNIT) $(LNFODWRFUNIT) $(DYNLIBSUNIT) \
       $(TYPESUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) \
-      so32dll $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) \
+      $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SPFU128UNIT)       $(UFLOAT128UNIT)
-rsts=$(MATHUNIT) $(TYPINFOUNIT) pmhelp $(CLASSESUNIT) $(SYSCONSTUNIT)
+rsts=$(MATHUNIT) $(TYPINFOUNIT) $(PMHELPUNIT) $(CLASSESUNIT) $(SYSCONSTUNIT)
 implicitunits=$(EXEINFOUNIT) \
       $(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT) $(CP1255UNIT) $(CP1256UNIT) $(CP1257UNIT) $(CP1258UNIT) \
       $(CP437UNIT) $(CP646UNIT) $(CP737UNIT) $(CP775UNIT) $(CP850UNIT) $(CP852UNIT) $(CP855UNIT) $(CP856UNIT) $(CP857UNIT) $(CP860UNIT) $(CP861UNIT) $(CP862UNIT) \
@@ -49,7 +51,7 @@ SYSTEMUNITEXT=pas
 DOSUNITEXT=pas
 PORTSUNITEXT=pas
 UNITPREFIX=rtl
-SYSUTILS_DEPS_OS=doscalls$(PPUEXT)
+SYSUTILS_DEPS_OS=$(DOSCALLSUNIT)$(PPUEXT)
 
 SYSTEMUNIT=system
 RTLCONSTSUNIT=rtlconst
@@ -93,14 +95,14 @@ SYSDEPS=$(SYSINCDEPS) $(SYSCPUDEPS)
 # System Dependent Units
 #
 #
-dynlibs$(PPUEXT) : $(INC)/dynlibs.pas doscalls$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
+dynlibs$(PPUEXT) : $(INC)/dynlibs.pas $(DOSCALLSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
 
 #
 # TP7 Compatible RTL Units
 #
 
-dos$(PPUEXT) : dos.pas $(INC)/filerec.inc $(INC)/textrec.inc strings$(PPUEXT) \
-               doscalls$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
+DOS_OS_DEPS = $(INC)/filerec.inc $(INC)/textrec.inc $(STRINGSUNIT)$(PPUEXT) \
+               $(DOSCALLSUNIT)$(PPUEXT)
 
 #graph$(PPUEXT) : graph.pp $(SYSTEMUNIT)$(PPUEXT)
 
