--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -515,14 +515,14 @@ endif
 #
 # Set up namespaced names
 #
-ifdef FPC_DOTTEDUNITS 
+ifdef FPC_DOTTEDUNITS
 
 NS_SYSTEM=System.
 NS_CPUNITS=System.CodePages.
 NSDIR=$(RTL)/namespaced
 NSINC=$(NSDIR)/common
 OPT:=$(OPT) -dFPC_DOTTEDUNITS
-BASEINCLUDE=$(INC) $(PROCINC) 
+BASEINCLUDE=$(INC) $(PROCINC)
 BASESOURCE=$(INC) $(PROCINC) $($(COMMONUNIT))
 
 endif
@@ -531,7 +531,7 @@ CPUNITSBASE=$(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT
       $(CP437UNIT) $(CP646UNIT) $(CP737UNIT) $(CP775UNIT) $(CP850UNIT) $(CP852UNIT) $(CP855UNIT) $(CP856UNIT) $(CP857UNIT) $(CP860UNIT) $(CP861UNIT) $(CP862UNIT) \
       $(CP863UNIT) $(CP864UNIT) $(CP865UNIT) $(CP866UNIT) $(CP869UNIT) $(CP874UNIT) $(CP3021UNIT) $(CP8859_1UNIT) $(CP8859_2UNIT) $(CP8859_3UNIT) $(CP8859_4UNIT) \
       $(CP8859_5UNIT) $(CP8859_6UNIT) $(CP8859_7UNIT) $(CP8859_8UNIT) $(CP8859_9UNIT) $(CP8859_10UNIT) $(CP8859_11UNIT) \
-      $(CP8859_13UNIT) $(CP8859_14UNIT) $(CP8859_15UNIT) $(CP8859_16UNIT) $(CPKOI8_RUNIT) $(CPKOI8_UUNIT) 
+      $(CP8859_13UNIT) $(CP8859_14UNIT) $(CP8859_15UNIT) $(CP8859_16UNIT) $(CPKOI8_RUNIT) $(CPKOI8_UUNIT)
 
 CPUNITS=$(addprefix $(NS_CPUNITS),$(CPUNITSBASE))
 
@@ -613,7 +613,7 @@ ifndef BASEUNIXDIR
 BASEUNIXDIR=$(UNIXINC)
 endif
 
-# On some platforms, the DOS unit is in the buildrtl target, 
+# On some platforms, the DOS unit is in the buildrtl target,
 # and will be specified in EXTPAS_DEPS_OS. If it is not, then we add the dos
 # unit as a dependency here
 ifndef EXTPAS_DEPS_OS
@@ -621,7 +621,7 @@ EXTPAS_DEPS_OS=$(DOSUNIT)$(PPUEXT)
 endif
 
 #
-# Some units have the same name for dotted/non-dotted RTL. 
+# Some units have the same name for dotted/non-dotted RTL.
 # These units must be passed FPC_DOTTEDUNITS explicitly
 # so they can correctly load dependencies.
 #
@@ -640,11 +640,11 @@ endif
 #
 
 ###################################################
-# Units for which there is no namespaced equivalent 
+# Units for which there is no namespaced equivalent
 # Because they are included by the compiler automatically
 ########################################
 
-# System 
+# System
 
 $(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT).$(SYSTEMUNITEXT) $(SYSDEPS)
         $(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $<
@@ -671,7 +671,7 @@ uachar$(PPUEXT): $(UACHAR_DEPS)
 
 OBJPAS_DEPS= $(OBJPASDIR)/objpas.pp $(INC)/except.inc \
              $(SYSTEMUNIT)$(PPUEXT) \
-             $(OBJPAS_DEPS_OS) $(OBJPAS_DEPS_SPU)  
+             $(OBJPAS_DEPS_OS) $(OBJPAS_DEPS_SPU)
 
 objpas$(PPUEXT): $(OBJPAS_DEPS)
         $(COMPILER) $(OBJPAS_OPT) -Fi$(OBJPASDIR) $<
@@ -680,17 +680,17 @@ objpas$(PPUEXT): $(OBJPAS_DEPS)
 
 MACPAS_DEPS=$(INC)/macpas.pp \
             objpas$(PPUEXT) $(MATHUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
-            $(MACPAS_DEPS_OS)  $(MACPAS_DEPS_CPU) 
-        
+            $(MACPAS_DEPS_OS)  $(MACPAS_DEPS_CPU)
+
 macpas$(PPUEXT) : $(MACPAS_DEPS)
-        $(COMPILER) $(MACPAS_OPT) $< 
+        $(COMPILER) $(MACPAS_OPT) $<
 
 # iso7185
 
 ISO7185_DEPS= $(INC)/$(ISO7185UNIT).pp \
               $(SYSTEMUNIT)$(PPUEXT) \
-              $(ISO7185_DEPS_OS) $(ISO7185_DEPS_CPU) 
- 
+              $(ISO7185_DEPS_OS) $(ISO7185_DEPS_CPU)
+
 iso7185$(PPUEXT) : $(ISO7185_DEPS)
         $(COMPILER) $(ISO7185_OPT) $<
 
@@ -706,7 +706,7 @@ extpas$(PPUEXT) : $(EXTPAS_DEPS)
 # fpintres
 
 FPINTRES_DEPS= $(INC)/fpintres.pp $(SYSTEMUNIT)$(PPUEXT) \
-               $(FPINTRES_DEPS_OS) $(FPINTRES_DEPS_CPU)              
+               $(FPINTRES_DEPS_OS) $(FPINTRES_DEPS_CPU)
 
 fpintres$(PPUEXT) : $(FPINTRES_DEPS)
         $(COMPILER) $(FPINTRES_OPT) $<
@@ -815,7 +815,7 @@ PORTS_DEPS=$(PORTSDIR)/ports.$(PORTSUNITEXT) \
 ports$(PPUEXT) : $(PORTS_DEPS) 
 	$(COMPILER) $(PORTS_OPT) $<
 
-System.Ports$(PPUEXT) :  $(NSINC)/System.Ports.pp $(PORTS_DEPS) 
+System.Ports$(PPUEXT) :  $(NSINC)/System.Ports.$(PORTSUNITEXT) $(PORTS_DEPS)
 	$(COMPILER) $(PORTS_OPT) $<
 
 #
@@ -914,8 +914,8 @@ DOS_DEPS=$(DOSDIR)/dos.$(DOSUNITEXT)  $(INC)/filerec.inc $(INC)/textrec.inc \
 dos$(PPUEXT): $(DOS_DEPS)
 	$(COMPILER) $(DOS_OPTS) $<
 
-TP.DOS$(PPUEXT): $(NSINC)/TP.DOS.pp $(DOS_DEPS) 
-	$(COMPILER) $(DOS_OPTS) $<
+TP.DOS$(PPUEXT): $(NSINC)/TP.DOS.$(DOSUNITEXT) $(DOS_DEPS)
+	$(COMPILER) $(DOS_OPTS) $(DOS_NS_OPTS) $<
 
 MSMOUSE_DEPS=msmouse.pp $(SYSTEMUNIT)$(PPUEXT)
 
@@ -1570,7 +1570,7 @@ OS2DEF_DEPS = $(OS2DIR)/os2def.pas $(SYSTEMUNIT)$(PPUEXT) \
 os2def$(PPUEXT) : $(OS2DEF_DEPS)
         $(COMPILER) $<
 
-OS2Api.$(PPUEXT) : $(NSOS2DIR)/OS2Api..pas $(OS2DEF_DEPS)
+OS2Api.os2def$(PPUEXT) : $(NSOS2DIR)/OS2Api.os2def.pas $(OS2DEF_DEPS)
         $(COMPILER) -Fi$(OS2DIR) $<
 
 DOSCALL2_DEPS = $(OS2DIR)/doscall2.pas $(DOSCALLSUNIT)$(PPUEXT) $(OS2DEFUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
