--- a/rtl/os2/Makefile.fpc
+++ b/rtl/os2/Makefile.fpc
@@ -51,10 +51,16 @@ SYSTEMUNITEXT=pas
 DOSUNITEXT=pas
 PORTSUNITEXT=pas
 UNITPREFIX=rtl
+DOS_DEPS_OS=$(DOSCALLSUNIT)$(PPUEXT)
 SYSUTILS_DEPS_OS=$(DOSCALLSUNIT)$(PPUEXT)
+DYNLIBS_DEPS_OS=$(DOSCALLSUNIT)$(PPUEXT)
+
+
 
 SYSTEMUNIT=system
+ifndef FPC_DOTTEDUNITS
 RTLCONSTSUNIT=rtlconst
+endif
 
 # Use new feature from 1.0.5 version
 # that generates release PPU files
