--- a/rtl/win64/Makefile.fpc
+++ b/rtl/win64/Makefile.fpc
@@ -59,6 +59,7 @@ SYSUTILSDIR=$(WINDIR)
 SYSUTILS_OPT=-Fi../win
 SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) $(WINDIRSUNIT)$(PPUEXT)
 WINDIRSDIR=$(WINDIR)
+DYNLIBSINCDIR=$(WINDIR)
 
 UNITPREFIX=rtl
 SYSTEMUNIT=system
