Put unique rule for unicodedata into inc/Makefile.rtl

--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -1198,6 +1198,21 @@ charset$(PPUEXT) : $(CHARSET_DEPS)
 
 System.CharSet$(PPUEXT) : $(NSINC)/System.CharSet.pp $(CHARSET_DEPS)
 	$(COMPILER) $(CHARSET_OPT) $< 
+
+#
+# unicodedata
+#
+
+UNICODEDATA_DEPS = $(OBJPASDIR)/unicodedata.pas $(OBJPASDIR)/unicodedata.inc \
+		   $(OBJPASDIR)/unicodedata_le.inc $(OBJPASDIR)/unicodedata_be.inc \
+		   $(SYSTEMUNIT)$(PPUEXT)
+
+unicodedata$(PPUEXT) : $(UNICODEDATA_DEPS)
+        $(COMPILER) -Fi$(OBJPASDIR) $(UNICODEDATA_OPT) $<
+
+System.CodePages.unicodedata$(PPUEXT) : $(NSINC)/System.CodePages.unicodedata.pas $(UNICODEDATA_DEPS)
+        $(COMPILER) -Fi$(OBJPASDIR) $(UNICODEDATA_OPT) $<
+
 #
 # cpall (in fact a build unit for all CP_) 
 #
