--- a/rtl/win64/Makefile.fpc
+++ b/rtl/win64/Makefile.fpc
@@ -89,6 +89,7 @@ OBJPASDIR=$(RTL)/objpas
 WINDOWS_SOURCE_FILES=$(addprefix $(WININC)/,$(addsuffix .inc,$(WINDOWS_FILES)))
 FPC_SYSTEM_OPT=-Fi../win
 EXEINFO_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
+FPWIDESTRING_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
 
 [rules]
 .NOTPARALLEL:
