--- a/rtl/wince/Makefile.fpc
+++ b/rtl/wince/Makefile.fpc
@@ -86,6 +86,7 @@ DOS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
 SYSUTILSDIR=.
 SYSUTILS_OPT=-Fi../win
 SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) 
+FPWIDESTRING_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
 
 [rules]
 .NOTPARALLEL:
