--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -594,6 +594,10 @@ ifndef NSBSDDIR
 NSBSDDIR=$(NSDIR)/bsd
 endif
 
+ifndef NSWINDOWSDIR
+NSWINDOWSDIR=$(NSDIR)/windows
+endif
+
 ifdef FPC_DOTTEDUNITS
 MACPAS_OPT:=$(MACPAS_OPT) -dFPC_DOTTEDUNITS
 EXTPAS_OPT:=$(EXTPAS_OPT) -dFPC_DOTTEDUNITS
@@ -1477,7 +1481,7 @@ WINDOWS_DEPS=windows.pp $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
 windows$(PPUEXT): $(WINDOWS_DEPS)
 	$(COMPILER) $(WINDOWS_OPT) $<
 
-WinApi.Windows$(PPUEXT): $(NSOSDIR)/WinApi.Windows.pp $(WINDOWS_DEPS)
+WinApi.Windows$(PPUEXT): $(NSWINDOWSDIR)/WinApi.Windows.pp $(WINDOWS_DEPS)
         $(COMPILER) -Fi$(WININC) -Fi$(WINDIR) $(WINDOWS_OPT) $<
 
 #
@@ -1489,7 +1493,7 @@ WINDIRS_DEPS=$(WINDIRSDIR)/windirs.pp $(WINDOWSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPU
 windirs$(PPUEXT): $(WINDIRS_DEPS)
 	$(COMPILER) $(WINDIRS_OPT) $<
 
-WinApi.WinDirs$(PPUEXT): $(NSOSDIR)/WinApi.WinDirs.pp $(WINDIRS_DEPS)
+WinApi.WinDirs$(PPUEXT): $(NSWINDOWSDIR)/WinApi.WinDirs.pp $(WINDIRS_DEPS)
         $(COMPILER) -Fi$(WININC) -Fi$(WINDIR) $(WINDIRS_OPT) $<
 
 ###################
