Regenarate rtl Makefile's

--- a/rtl/freertos/Makefile
+++ b/rtl/freertos/Makefile
@@ -2396,6 +2396,9 @@ endif
 ifndef NSBSDDIR
 NSBSDDIR=$(NSDIR)/bsd
 endif
+ifndef NSWINDOWSDIR
+NSWINDOWSDIR=$(NSDIR)/windows
+endif
 ifdef FPC_DOTTEDUNITS
 MACPAS_OPT:=$(MACPAS_OPT) -dFPC_DOTTEDUNITS
 EXTPAS_OPT:=$(EXTPAS_OPT) -dFPC_DOTTEDUNITS
@@ -2854,13 +2857,13 @@ WINDOWS_DEPS=windows.pp $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT) \
 	     $(WINDOWS_DEPS_OS) $(WINDOWS_DEPS_CPU)
 windows$(PPUEXT): $(WINDOWS_DEPS)
 	$(COMPILER) $(WINDOWS_OPT) $<
-WinApi.Windows$(PPUEXT): $(NSOSDIR)/WinApi.Windows.pp $(WINDOWS_DEPS)
+WinApi.Windows$(PPUEXT): $(NSWINDOWSDIR)/WinApi.Windows.pp $(WINDOWS_DEPS)
 	$(COMPILER) -Fi$(WININC) -Fi$(WINDIR) $(WINDOWS_OPT) $<
 WINDIRS_DEPS=$(WINDIRSDIR)/windirs.pp $(WINDOWSUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT) \
 	     $(WINDIRS_DEPS_OS) $(WINDIRS_DEPS_CPU)
 windirs$(PPUEXT): $(WINDIRS_DEPS)
 	$(COMPILER) $(WINDIRS_OPT) $<
-WinApi.WinDirs$(PPUEXT): $(NSOSDIR)/WinApi.WinDirs.pp $(WINDIRS_DEPS)
+WinApi.WinDirs$(PPUEXT): $(NSWINDOWSDIR)/WinApi.WinDirs.pp $(WINDIRS_DEPS)
 	$(COMPILER) -Fi$(WININC) -Fi$(WINDIR) $(WINDIRS_OPT) $<
 SYSCTL_DEPS=$(BSDINC)/sysctl.pp $(SYSTEMUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) \
 	    $(SYSCTL_DEPS_OS) $(SYSCTL_DEPS_CPU)
