--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -1209,7 +1209,7 @@ System.CharSet$(PPUEXT) : $(NSINC)/System.CharSet.pp $(CHARSET_DEPS)
 
 UNICODEDATA_DEPS = $(OBJPASDIR)/unicodedata.pas $(OBJPASDIR)/unicodedata.inc \
 		   $(OBJPASDIR)/unicodedata_le.inc $(OBJPASDIR)/unicodedata_be.inc \
-		   $(SYSTEMUNIT)$(PPUEXT)
+		   $(SYSTEMUNIT)$(PPUEXT) objpas$(PPUEXT)
 
 unicodedata$(PPUEXT) : $(UNICODEDATA_DEPS)
         $(COMPILER) -Fi$(OBJPASDIR) $(UNICODEDATA_OPT) $<
