Set RTLCONSTSUNIT to rtlconst only of FPC_DOTTEDUNITS is not defined

--- a/rtl/beos/Makefile.fpc
+++ b/rtl/beos/Makefile.fpc
@@ -60,7 +60,9 @@ UNIXINC=$(RTL)/unix
 UNITPREFIX=rtl
 SYSTEMUNIT=system
 BASEUNIXDIR=.
+ifndef FPC_DOTTEDUNITS
 RTLCONSTSUNIT=rtlconst
+endif
 # Use new feature from 1.0.5 version
 # that generates release PPU files
 # which will not be recompiled
