--- a/rtl/watcom/Makefile.fpc
+++ b/rtl/watcom/Makefile.fpc
@@ -53,7 +53,9 @@ PROCINC=../$(CPU_TARGET)
 
 UNITPREFIX=rtl
 SYSTEMUNIT=system
+ifndef FPC_DOTTEDUNITS
 RTLCONSTSUNIT=rtlconst
+endif
 DOS_DEPS_OS=$(STRINGSUNIT)$(PPUEXT)
 SYSUTILS_DEPS_OS=$(DOSUNIT)$(PPUEXT)
 
