--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -947,10 +947,10 @@ SYSUTILS_DEPS=$(SYSUTILSDIR)/sysutils.pp $(wildcard $(OBJPASDIR)/$(SYSUTILSUNIT)
               $(SYSUTILS_DEPS_OS) $(SYSUTILS_DEPS_CPU)
 
 sysutils$(PPUEXT) : $(SYSUTILS_DEPS)
-        $(COMPILER) -Fi$(OBJPASDIR)/$(SYSUTILSUNIT) $<
+        $(COMPILER) -Fi$(OBJPASDIR)/sysutils $<
 
 System.SysUtils$(PPUEXT) : $(NSINC)/System.SysUtils.pp $(SYSUTILS_DEPS)
-        $(COMPILER) $(SYSUTILS_OPT) -Fi$(OBJPASDIR)/sysutils $<
+        $(COMPILER) $(SYSUTILS_OPT) -Fi$(OBJPASDIR)/sysutils -Fi$(SYSUTILSDIR) $<
 
 #
 # Classes
